--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <div class="settings-title" data-i18n="settings.links">Liens</div>
             <label style="font-size:13px;"><input type="checkbox" id="openExternalLinksCheckbox"> <span data-i18n="settings.openExternal">Ouvrir les liens dans le navigateur externe</span></label>
           </div>
+          <div class="settings-group">
+            <div class="settings-title" data-i18n="settings.gpuTitle">Accélération GPU</div>
+            <label style="font-size:13px;"><input type="checkbox" id="disableGpuCheckbox"> <span data-i18n="settings.gpuLabel">Désactiver l'accélération GPU (pour corriger les bugs graphiques)</span></label>
+          </div>
           <div class="settings-separator"></div>
           <div class="settings-group">
             <div class="settings-title" data-i18n="settings.coming">À venir</div>
@@ -65,13 +69,13 @@
   <div class="sub-bar" role="toolbar" aria-label="Navigation des onglets">
     <div class="tabs-row">
       <nav class="tabs" role="tablist" aria-label="Catégories">
-        <button class="tab active" role="tab" aria-selected="true" data-category="all" data-i18n="tabs.all">Tout</button>
+  <button class="tab active" role="tab" aria-selected="true" data-category="all" data-i18n="tabs.all">Applications</button>
         <button class="tab" role="tab" aria-selected="false" data-category="installed"><span data-i18n="tabs.installed">Installées</span> <span id="installedCount" class="badge">0</span></button>
         <button class="tab" role="tab" aria-selected="false" data-category="updates" data-i18n="tabs.updates">Mises à jour</button>
         <button class="tab" role="tab" aria-selected="false" data-category="advanced" data-i18n="tabs.advanced">Mode avancé</button>
       </nav>
       <div class="view-mode-switch" role="group" aria-label="Mode d'affichage">
-        <button id="refreshBtn" class="btn btn-outline btn-refresh" title="Rafraîchir la liste" aria-label="Rafraîchir" data-i18n-title="refresh.title" data-i18n-aria-label="refresh.aria">↻</button>
+    <button id="refreshBtn" class="btn btn-outline btn-refresh" title="Rafraîchir la liste" aria-label="Rafraîchir" data-i18n-title="refresh.title" data-i18n-aria-label="refresh.aria"><span class="icon" aria-hidden="true">↻</span></button>
         <button id="modeMenuBtn" class="btn btn-outline" aria-haspopup="true" aria-expanded="false" aria-controls="modeMenu" title="Changer de mode d'affichage" data-i18n-title="modeMenu.title">▦</button>
         <div id="modeMenu" class="mode-menu" role="menu" hidden>
           <button class="mode-option" data-mode="grid" role="menuitem" aria-pressed="true" data-i18n="modeMenu.grid">▦ Grille</button>
@@ -123,11 +127,15 @@
 
     <p class="docs-link"><a href="https://github.com/ivan-hc/AM" target="_blank" rel="noopener"><span data-i18n="advanced.docs">Documentation complète & guides →</span> AM (GitHub)</a></p>
       </section>
-      <div id="apps" class="app-list" aria-live="polite" aria-busy="true"></div>
+  <div id="appsModeBar" class="apps-mode-bar"></div>
+  <div id="categoryBar" class="category-bar" style="margin-bottom:12px;"></div>
+  <div id="apps" class="app-list" aria-live="polite" aria-busy="true"></div>
       <section id="appDetails" class="app-details" hidden>
     <button id="backToListBtn" class="btn btn-outline back-btn" data-i18n="details.back">← Retour</button>
         <div class="details-header">
-          <img id="detailsIcon" alt="Icône" />
+          <div class="details-icon-wrapper" style="position:relative;display:inline-block;">
+            <img id="detailsIcon" alt="Icône" />
+          </div>
           <div class="details-head-text">
             <h2 id="detailsName"></h2>
           </div>
@@ -139,10 +147,15 @@
         </div>
         <div id="installStream" class="install-stream" hidden>
           <div class="install-stream-head">
-            <div class="install-stream-status" id="installStreamStatus" data-i18n="install.status">En cours…</div>
-            <div class="install-stream-meta"><span id="installStreamElapsed">0s</span> – <span id="installStreamLines" data-i18n="install.lines">0 lignes</span> · <button id="installStreamToggle" class="mini-link-btn" aria-expanded="false" type="button" data-i18n="install.log">Afficher le log</button></div>
+            <div class="install-stream-meta">
+              <span id="installStreamElapsed">0s</span>
+            </div>
+            <div class="install-stream-progressbar-wrapper" style="width:100%;margin-top:8px;">
+              <span id="installStreamProgressPercent" style="margin-right:10px;font-weight:bold;font-size:13px;"></span>
+              <progress id="installStreamProgressBar" value="0" max="100" style="vertical-align:middle;width:160px;height:14px;"></progress>
+              <span id="installStreamEta" style="margin-left:12px;font-size:13px;color:var(--muted);"></span>
+            </div>
           </div>
-            <pre id="installStreamLog" class="install-stream-log" aria-label="Journal installation" tabindex="0" hidden></pre>
         </div>
         <div class="details-long-wrapper">
           <h3 class="details-section-title" data-i18n="details.desc">Description</h3>
