--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="translations.js"></script>
   <script src="renderer.js"></script>
   <!-- Modale choix installation multiple -->
   <div id="multiChoiceModal" class="modal" role="dialog" aria-modal="true" aria-label="Choix d'installation" hidden>
