--- a/index.html
+++ b/index.html
@@ -212,7 +212,12 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="translations.js"></script>
+  <script src="js/constants.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/preferences.js"></script>
+  <script src="js/setup.js"></script>
+  <script src="js/translations.js"></script>
+  <script src="js/categories.js"></script>
   <script src="renderer.js"></script>
   <!-- Modale choix installation multiple -->
   <div id="multiChoiceModal" class="modal" role="dialog" aria-modal="true" aria-label="Choix d'installation" hidden>
