refactor: reorganize renderer support modules

--- a/index.html
+++ b/index.html
@@ -212,12 +212,15 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="js/constants.js"></script>
+  <script src="js/config/constants.js"></script>
   <script src="js/utils.js"></script>
-  <script src="js/preferences.js"></script>
-  <script src="js/setup.js"></script>
-  <script src="js/translations.js"></script>
-  <script src="js/categories.js"></script>
+  <script src="js/services/preferences.js"></script>
+  <script src="js/ui/layout.js"></script>
+  <script src="js/app/init.js"></script>
+  <script src="js/i18n/translations.js"></script>
+  <script src="js/features/categories/cache.js"></script>
+  <script src="js/features/categories/dropdown.js"></script>
+  <script src="js/features/categories/index.js"></script>
   <script src="renderer.js"></script>
   <!-- Modale choix installation multiple -->
   <div id="multiChoiceModal" class="modal" role="dialog" aria-modal="true" aria-label="Choix d'installation" hidden>
