--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
   <script src="js/features/categories/cache.js"></script>
   <script src="js/features/categories/dropdown.js"></script>
   <script src="js/features/categories/index.js"></script>
+  <script src="js/features/search/index.js"></script>
   <script src="renderer.js"></script>
   <!-- Modale choix installation multiple -->
   <div id="multiChoiceModal" class="modal" role="dialog" aria-modal="true" aria-label="Choix d'installation" hidden>
